tests/baselines/reference/nonPrimitiveAssignError.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAssignError.ts(5,1): error TS2322: Type '实例' is not assignable to type '{ foo: 文字; }'.
  Property 'foo' is missing in type '{}'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAssignError.ts(13,1): error TS2322: Type '数字' is not assignable to type '实例'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAssignError.ts(14,1): error TS2322: Type '为真' is not assignable to type '实例'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAssignError.ts(15,1): error TS2322: Type '文字' is not assignable to type '实例'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAssignError.ts(17,1): error TS2322: Type '实例' is not assignable to type '数字'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAssignError.ts(18,1): error TS2322: Type '实例' is not assignable to type '真假'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAssignError.ts(19,1): error TS2322: Type '实例' is not assignable to type '文字'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveAssignError.ts (7 errors) ====
    var x = {};
    var y = {foo: "bar"};
    var a: object;
    x = a;
    y = a; // expect error
    ~
!!! error TS2322: Type '实例' is not assignable to type '{ foo: 文字; }'.
!!! error TS2322:   Property 'foo' is missing in type '{}'.
    a = x;
    a = y;
    
    var n = 123;
    var b = true;
    var s = "fooo";
    
    a = n; // expect error
    ~
!!! error TS2322: Type '数字' is not assignable to type '实例'.
    a = b; // expect error
    ~
!!! error TS2322: Type '为真' is not assignable to type '实例'.
    a = s; // expect error
    ~
!!! error TS2322: Type '文字' is not assignable to type '实例'.
    
    n = a; // expect error
    ~
!!! error TS2322: Type '实例' is not assignable to type '数字'.
    b = a; // expect error
    ~
!!! error TS2322: Type '实例' is not assignable to type '真假'.
    s = a; // expect error
    ~
!!! error TS2322: Type '实例' is not assignable to type '文字'.
    
    var numObj: Number = 123;
    var boolObj: Boolean = true;
    var strObj: String = "string";
    
    a = numObj; // ok
    a = boolObj; // ok
    a = strObj; // ok
    